compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__reserved_word_const.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "const in = 1\n\npub fn export() {\n  in\n}\n"
---
----- SOURCE CODE
const in = 1

pub fn export() {
  in
}


----- COMPILED JAVASCRIPT
const in$ = 1;

export function export$() {
  return in$;
}
