compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__variable_rewriting_in_anon_fn_with_matching_parameter.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "pub fn bad() {\n  fn(state) {\n    let state = state\n    state\n  }\n}\n"
---
----- SOURCE CODE
pub fn bad() {
  fn(state) {
    let state = state
    state
  }
}


----- COMPILED JAVASCRIPT
export function bad() {
  return (state) => {
    let state$1 = state;
    return state$1;
  };
}
